# AndroidSynth

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mjmitchelldev/androidsynth/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OboeAudioPlayer.cpp  OscillatorFactory.cpp  Sequencer.cpp  WavetableFactory.cpp  WavetableSynthesizer.cpp  wavetablesynthesizer-native-lib.cpp
app/src/main/cpp/AudioProcessors/: EnvelopeProcessor.cpp  SignalSummer.cpp
app/src/main/cpp/AudioProcessors/Filters/: BiquadFilter.cpp  ButterworthLowPassFilter.cpp  LowPassFilter.cpp
app/src/main/cpp/AudioProcessors/Oscillators/: WavetableOscillator.cpp
app/src/main/cpp/Events/: NoteEvent.cpp
app/src/main/cpp/SequencableObject/: FilteredSquareWaveInstrument.cpp
app/src/main/cpp/Sequencers/: ChannelDistributingNoteSequencer.cpp  ChannelSequencer.cpp
app/src/main/cpp/include/: AudioPlayer.h  AudioSource.h  BiquadFilter.h  ButterworthLowPassFilter.h  ChannelDistributingNoteSequencer.h  ChannelSequencer.h  EnvelopeProcessor.h  FilteredSquareWaveInstrument.h  INoteSequencer.h  ISquencedInstrument.h  Log.h  LowPassFilter.h  MathConstants.h  MusicConsts.h  NoteEvent.h  OboeAudioPlayer.h  OscillatorFactory.h  Sequencer.h  SignalSummer.h  Wavetable.h  WavetableFactory.h  WavetableOscillator.h  WavetableSynthesizer.h
app/src/main/cpp/include-untestable/: OboeAudioPlayer.h
app/src/main/cpp/include/Interfaces/: IAudioPlayer.h  IAudioSource.h  INoteSequencer.h  IOscillator.h  IOscillatorFactory.h  ISquencedInstrument.h
app/src/main/java/com/mjmitchelldev/androidsynth/: LoggingWavetableSynthesizer.kt  MainActivity.kt  NativeWavetableSynthesizer.kt  WavetableSynthesizer.kt  WavetableSynthesizerViewModel.kt
app/src/main/java/com/mjmitchelldev/androidsynth/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/cpp/: CMakeLists.txt
app/src/test/cpp/AndroidSynthTests/: EnvelopeProcessorTests.cc
app/src/test/cpp/AndroidSynthTests/AudioProcessors/: EnvelopeProcessorTests.cc  SignalSummerTests.cc
app/src/test/cpp/AndroidSynthTests/AudioProcessors/Filters/: ButterworthLowpassFilterTests.cc
app/src/test/cpp/AndroidSynthTests/AudioProcessors/Oscillators/: WavetableOscillatorTests.cc
app/src/test/cpp/AndroidSynthTests/Sequencers/: ChannelSequencerTests.cc
app/src/test/java/com/mjmitchelldev/androidsynth/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
